Add webhook to build docker images on release

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 ovirt-prometheus-bridge:
-  build: .
+  image: rmohr/ovirt-prometheus-bridge
   volumes:
     - /targets
   command: ["-no-verify", "-engine-url=https://${HOSTIP}:8443", "-output=/targets/hosts.json"]
